<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lancamento_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/round_background"
        android:elevation="10dp"
        android:paddingHorizontal="24dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_lancamento"
            style="@style/MainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:gravity="top"
            android:text="Lançando Item"
            app:layout_constraintBottom_toTopOf="@+id/longPressImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/longPressImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ovos"
            app:layout_constraintBottom_toTopOf="@+id/quant_title"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <TextView
            android:id="@+id/product_title"
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/product_placeholder"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toTopOf="@+id/product_price"
            app:layout_constraintStart_toEndOf="@+id/longPressImage"
            app:layout_constraintTop_toBottomOf="@+id/title_lancamento" />

        <TextView
            android:id="@+id/product_price"
            style="@style/MediumBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="15dp"
            android:text="@string/price_placeholder"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toTopOf="@+id/quant_title"
            app:layout_constraintStart_toEndOf="@+id/longPressImage" />

        <View
            android:layout_width="73dp"
            android:layout_height="0.5dp"
            android:layout_marginBottom="30dp"
            android:background="@color/marrom"
            app:layout_constraintBottom_toTopOf="@+id/qnt_add"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:layout_width="73dp"
            android:layout_height="0.5dp"
            android:layout_marginBottom="30dp"
            android:background="@color/marrom"
            app:layout_constraintBottom_toTopOf="@+id/qnt_add"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/quant_title"
            style="@style/SecondaryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="Quantidade"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/qnt_counter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/qnt_add"
            style="@style/MainTitle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/round"
            android:backgroundTint="@color/marrom"
            android:gravity="center"
            android:text="+"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/total_text"
            app:layout_constraintStart_toEndOf="@+id/qnt_counter" />

        <Button
            android:id="@+id/qnt_sub_limpar"
            style="@style/MainTitle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/round"
            android:backgroundTint="@color/marrom"
            android:gravity="center"
            android:text="-"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/total_text"
            app:layout_constraintEnd_toStartOf="@+id/qnt_counter" />

        <Button
            android:id="@+id/qnt_counter"
            style="@style/SmallText"
            android:layout_width="54dp"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/round_background"
            android:backgroundTint="@color/marrom_light"
            android:gravity="center"
            android:text="0"
            app:layout_constraintBottom_toTopOf="@+id/total_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/total_text"
            style="@style/MediumBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="Total: R$ 0,00"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/observation_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/observation_title"
            style="@style/SecondaryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/observacao"
            app:layout_constraintBottom_toTopOf="@+id/observationText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/observationText"
            style="@style/SmallText"
            android:layout_width="252dp"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:autofillHints="Digite aqui sua observação"
            android:background="@drawable/round_background"
            android:backgroundTint="@color/marrom_light"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_cancelar"
            style="@style/SmallBold"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/round_background"
            android:backgroundTint="@color/marrom_light"
            android:text="@string/voltar_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_ok"
            style="@style/SmallBold"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/round_background"
            android:backgroundTint="@color/marrom"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/adicionar_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>